# TrackIR-Python

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  PLAN-jitter.md  README.md  WARP.md  plan.md  pyproject.toml  trackir.py  trackir_tir5v3.py  vcpkg.json
CameraSDK/include/: ActiveIOCommands.h  bitmap.h  cameracommands.h  cameracommonglobals.h  cameralibrarysettings.h  cameramodulebase.h  camerarev11.h  camerarev14.h  camerarev16.h  camerarev21.h  camerarev23.h  camerarev24.h  camerarev29.h  camerarev31.h  camerarev33.h  camerarev34.h  camerarev35.h  camerarev36.h  camerarev49.h  camerarev51.h  camerarev53.h  camerarev55.h  camerarev57.h  camerarev58.h  camerarev59.h  camerarev8.h  camerarev80.h  camerarev9.h  camerarevisions.h  devicedatastorageusb.h  esyncadditional.h  frame.h  framegroup.h  labelsegment.h  moduleactivelabel.h  modulesync.h  object.h  queue.h  resource.h  resourcemanager.h  (+6 more)
CameraSDK/include/Core/: Box3.h  BuildConfig.h  DOFDefinition.h  Frame.h  FrameRangeSlice.h  HighPerformanceLogger.h  JobQueue.h  Label.h  Marker.h  MathTypes.h  Matrix4.h  Matrix4.inl  Quaternion.h  RandomNumberGenerator.h  Region2.h  Singleton.h  ThreadHandle.h  ThreadedDispatch.h  TimeCode.h  Timer.h  Vector4.h
CameraSDK/include/inputmanagerethernet/: discoveryethernet.h
CameraSDK/samples/CameraViewerApp/: CameraHelpers.h  LinuxBuildInstructions.txt  QtCameraConnectionManager.h  QtCameraControlPanel.h  QtCameraViewer.cpp  QtVideoWidget.cpp  linuxBuild.sh
CameraSDK/samples/InfoDump/: CMakeLists.txt  DeviceConnectionManager.cpp  KeyPress.cpp  KeyPress.h  LinuxBuildInstructions.txt
TrackIR_SDK_Small_Samples_2.0/: README.md
TrackIR_SDK_Small_Samples_2.0/C++/TrackIR_CPPConsoleClient/: NPTestConsole.sln
TrackIR_SDK_Small_Samples_2.0/C++/TrackIR_CPPConsoleClient/res/: NPTest.rc2
TrackIR_SDK_Small_Samples_2.0/C++/TrackIR_CPPConsoleClient/src/: TrackIR_ClientCPP.cpp  TrackIR_ClientCPP.h
TrackIR_SDK_Small_Samples_2.0/C++/TrackIR_OpenGLClient/: TrackIRClientOGL.vcproj  TrackIRClientOGL.vcxproj  TrackIRClientOGL.vcxproj.filters  resource.h
TrackIR_SDK_Small_Samples_2.0/C++/TrackIR_OpenGLClient/res/: TrackIRClientOGL.rc
TrackIR_SDK_Small_Samples_2.0/C++/TrackIR_OpenGLClient/src/: GLRenderer.cpp  TrackIR_ClientOGL.h
TrackIR_SDK_Small_Samples_2.0/C++/include/MFC/: StdAfx.cpp  StdAfx.h
TrackIR_SDK_Small_Samples_2.0/Python/TrackIR_PythonClient/: TrackIR_PythonClient.pyproj  requirements.txt
TrackIR_SDK_Small_Samples_2.0/Python/TrackIR_PythonClient/src/: NPClientWraps.py
c/: AGENTS.md  CMakeLists.txt
c/examples/: stream_dump.c
c/include/opentrackir/: tir5.h  tir5_mouse.h  tir5_session.h  tir5_tooling.h
c/src/: tir5_device.c  tir5_frame.c  tir5_mouse.c  tir5_protocol.c  tir5_session.c  tir5_tooling.c
c/tests/: test_tir5.c
cpp/: AGENTS.md  CMakeLists.txt
cpp/opencv_preview/: main.cpp
mac/: AGENTS.md  OpenTrackIR.xctestplan  PLAN-macOS-libusb-to-IOKit.md
mac/OpenTrackIR/: ContentView.swift  OpenTrackIR-Bridging-Header.h  OpenTrackIRApp.swift  TrackIRCameraController.swift  TrackIRMouseBridge.c  TrackIRMouseBridge.h  TrackIRMouseController.swift  TrackIRNativeSession.c  TrackIRNativeSession.h  TrackIRNativeSources.c  TrackIRRuntimeController.swift  XKeysFootPedalMonitor.swift
mac/OpenTrackIR.xcodeproj/: project.pbxproj
mac/OpenTrackIR.xcodeproj/xcshareddata/xcschemes/: OpenTrackIR.xcscheme
mac/OpenTrackIR/Assets.xcassets/AppIcon.appiconset/: Contents.json
mac/OpenTrackIRTests/: ContentViewTests.swift  OpenTrackIRTests.swift  TrackIRMouseControllerTests.swift  XKeysFootPedalMonitorTests.swift
mac/OpenTrackIRUITests/: OpenTrackIRUITests.swift  OpenTrackIRUITestsLaunchTests.swift
python/: AGENTS.md  trackir_tir5v3.py
python-v2/: tir5v3.py
python/tests/: test_tir5v3.py
tests/: test_tir5v3.py
win/: WINDOWS_NATIVE_UI_PLAN.md  WINDOWS_USB_AND_MOUSE_PLAN.md  WINDOWS_XKEYS_FAST_MODE_PLAN.md  WINDOWS_ZADIG_FREE_INSTALL_PLAN.md
win/OpenTrackIR.WinUI/: OpenTrackIR.WinUI.slnx
win/OpenTrackIR.WinUI.Tests/: OpenTrackIR.WinUI.Tests.csproj  TrackIRUiLogicTests.cs  UnitTest1.cs
win/OpenTrackIR.WinUI/OpenTrackIR.WinUI/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  OpenTrackIR.WinUI.csproj  Package.StoreAssociation.xml  Package.appxmanifest  app.manifest
win/OpenTrackIR.WinUI/OpenTrackIR.WinUI/Models/: DashboardLayoutMode.cs  HotkeyCaptureLogic.cs  MainWindowLogic.cs  TrackIRControlState.cs  TrackIRControlStateJson.cs  TrackIRMouseRuntimeLogic.cs  TrackIRPresentationState.cs  TrackIRPreviewBitmapLogic.cs  TrackIRPreviewFrame.cs  TrackIRRuntimeLogic.cs  TrackIRRuntimePhase.cs  TrackIRSnapshot.cs  TrackIRUiLogic.cs  TrayUiLogic.cs  XKeysIndicatorState.cs  XKeysMonitorSnapshot.cs  XKeysReportLogic.cs
win/OpenTrackIR.WinUI/OpenTrackIR.WinUI/Properties/: launchSettings.json
win/OpenTrackIR.WinUI/OpenTrackIR.WinUI/Runtime/: ITrackIRRuntimeController.cs  MockTrackIRRuntimeController.cs  (+6 more)
win/OpenTrackIR.XKeysDebug/: OpenTrackIR.XKeysDebug.csproj  Program.cs
z_old-v1-research/: CLAUDE.md  GEMINI.md  WARP.md  plan.md
z_old-v1-research/CameraSDK/include/: ActiveIOTypes.h  DuplexFrameHelper.h  FrameCache.h  activetag.h  activetagtelemetry.h  blankframedata.h  camera.h  cameralibrary.h  cameralibraryglobals.h  cameramanager.h  camerarev10.h  camerarev12.h  camerarev13.h  camerarev15.h  camerarev17.h  camerarev18.h  camerarev25.h  camerarev26.h  camerarev27.h  camerarev30.h  camerarev32.h  camerarev37.h  camerarev38.h  camerarev39.h  camerarev5.h  camerarev50.h  camerarev52.h  camerarev56.h  camerarev6.h  camerarev7.h  camerarev74.h  camerarev83.h  cameratypes.h  camerawindow.h  coremath.h  devicedatastoragebase.h  esynctelemetry.h  healthmonitor.h  inputmanagerbase.h  jpegheader.h  (+4 more)
z_old-v1-research/CameraSDK/samples/CameraViewerApp/: BitmapPool.cpp  BitmapPool.h  CMakeLists.txt  QtCameraConnectionManager.cpp  QtCameraControlPanel.cpp  QtCameraPicker.cpp  QtCameraPicker.h  QtCameraViewer.h  QtVideoWidget.h  Readme  main.cpp  videodecoder.cpp  videodecoder.h
z_old-v1-research/TrackIR_SDK_Small_Samples_2.0/: Small Samples.sln
(+62 files in other folders)
